--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,10 @@
 @import url('./reset.css');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800;900&display=swap');
+
+* {
+    font-family:'Raleway','Sans-serif';
+	color: white;
+}
 
 body {
     background-color: black;
@@ -8,6 +14,63 @@ body {
     height: 605px;
     border-bottom: 1px solid #33A8DB;
     background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(49, 168, 221, .2), rgba(0, 0, 0, 0.6)), url('../images/banner.png') top/cover no-repeat;
+    padding-top: 3%;
     
+}
+
+.banner-content {
+    margin: auto;
+    width: 515px;
+    height: 393px;
+    text-align: center;
+}
+
+.banner-content p {
+    font-weight: 400;
+    font-size: 20px;
+    margin: 10px 0 24px;
 
 }
+
+.logo {
+    margin: auto auto 10px; 
+    width: 268px;
+    height: 268px;
+    background-color: #00000033;
+    border-radius: 50%;
+    background-origin: border-box;
+    padding: 10px;
+
+}
+
+.logo img {
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+.banner-content button{
+    background-color: transparent;
+    border: 2px solid;
+    border-image: linear-gradient(#3BA1CD, #1572B7) 10 ;
+    padding: 19px 91px;
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 16px;
+    color: #31A8DD;
+    letter-spacing: 0.21em;
+
+}
+
+h1 {
+    font-size: 40px;
+    font-weight: 900;
+    color: transparent;
+    text-transform: uppercase;
+    background-image: linear-gradient(#33A8DB, #1472B7);
+    background-clip: text;
+    -webkit-background-clip: text;
+
+}
+
