--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
 * {
     font-family:'Raleway','Sans-serif';
 	color: white;
+    box-sizing: border-box;
 }
 
 body {
@@ -14,19 +15,17 @@ body {
     height: 605px;
     border-bottom: 1px solid #33A8DB;
     background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(49, 168, 221, .2), rgba(0, 0, 0, 0.6)), url('../images/banner.png') top/cover no-repeat;
-    padding-top: 3%;
+    padding-top: 60px;
     
 }
 
 .banner-content {
     margin: auto;
     width: 515px;
-    height: 393px;
     text-align: center;
 }
 
 .banner-content p {
-    font-weight: 400;
     font-size: 20px;
     margin: 10px 0 24px;
 
@@ -38,7 +37,6 @@ body {
     height: 268px;
     background-color: #00000033;
     border-radius: 50%;
-    background-origin: border-box;
     padding: 10px;
 
 }
@@ -51,14 +49,15 @@ body {
 }
 
 .banner-content button{
+    color: #31A8DD;
     background-color: transparent;
+    width: 316px;
     border: 2px solid;
     border-image: linear-gradient(#3BA1CD, #1572B7) 10 ;
-    padding: 19px 91px;
+    padding: 19px;
     text-transform: uppercase;
     font-weight: 900;
     font-size: 16px;
-    color: #31A8DD;
     letter-spacing: 0.21em;
 
 }
@@ -71,6 +70,91 @@ h1 {
     background-image: linear-gradient(#33A8DB, #1472B7);
     background-clip: text;
     -webkit-background-clip: text;
+}
+
+h2 {
+    font-size: 32px;
+    font-weight: 700;
+    letter-spacing: 0.19em;
+    text-transform: uppercase;
+    color: #33A8DB;
+    margin-bottom: 0.5em;
 
 }
 
+section {
+    margin: 7em auto;
+}
+
+#course-content {
+    width: 792px;
+    text-align: center;
+}
+.modules-list {
+    margin: 2em 0;
+}
+.module {
+    background-color: #252525;
+    padding: 16px;
+    width: 535px;
+    margin: 0 auto 1.5em;
+    border: 1px solid #33A8DB;
+    border-radius: 57px;
+    box-shadow: -2px 6px 4px 0px #00000066 inset;
+    text-align: center;
+
+}
+
+.module span {
+    color: #33A8DB;
+}
+
+#transform-world {
+    height: 363px;
+    border-width: 1px 0px 1px 0px;
+    border-style: solid;
+    border-color: #33A8DB;
+    
+    background: url(../images/woman-code.png) center/cover no-repeat fixed;
+}
+
+#transform-world p {
+    width: 244px;
+    height: 141px;
+    margin-top: 111px;
+    margin-left: 198px;
+    font-weight: 900;
+    font-size: 40px;
+    text-shadow: 3px 2px #33A8DB;
+    text-transform: lowercase;
+    line-height: 46.96px;
+
+}
+
+#professional-challenges {
+    text-align: center;
+    width: 800px;
+}
+
+#professional-challenges img {
+    margin:30px auto;
+}
+
+footer {
+    height: 170px;
+    text-align: center;
+    margin: auto;
+    border-top: 1px solid #33A8DB;
+    background-image: linear-gradient(#33A8DB00 0%, #33A8DB33 100%);
+
+}
+
+footer a {
+    font-weight: 700;
+    text-decoration: none;
+    color: #33A8DB;
+}
+
+footer img {
+    margin: 59px auto 0px;
+}
